# deep_learning

./: .envrc  .gitignore  BAO_CAO_DU_AN.md  README.md  START_HERE.md  clean.py  main.py  pyproject.toml
cli/: __init__.py  main.py
data/: btc_1d_data_2018_to_2025.csv  btc_4h_data_2018_to_2025.csv
docs/: ANALOGIES.md  CONCEPTS.md  FLOW_DIAGRAM.md  HYPERPARAMETER_TUNING.md  LOSS_AND_METRICS_EXPLAINED.md  LSTM_VS_BILSTM.md  README.md  SURVIVAL_GUIDE.md  TESTING_GUIDE.md  WORKFLOW.md
final/: .gitignore  README.md  START_HERE.md  clean.py  main.py  pyproject.toml
final/docs/: ANALOGIES.md  SURVIVAL_GUIDE.md
final/notebooks/: run_complete.ipynb
final/step1_data/: __init__.py  fetch_data.py
final/step2_preprocessing/: __init__.py  scaling.py
final/utils/: __init__.py  runtime.py
notebooks/: run_complete.ipynb
reports/cli/BiLSTM_20251227_114045/: config.json  metrics.json  results_BiLSTM_20251227_114045.md
scripts/: __init__.py  clean.py
src/: __init__.py  config.py  pipeline.py  results.py  training.py
src/core/: __init__.py  data.py  metrics.py  model.py  preprocessing.py
src/runtime/: __init__.py  tensorflow.py
src/visualization/: __init__.py  plots.py
step1_data/: __init__.py  fetch_data.py
step2_preprocessing/: create_windows.py  scaling.py
step3_model/: __init__.py  bilstm.py
step4_training/: __init__.py  evaluate.py  train.py
step5_visualization/: __init__.py  plots.py
utils/: __init__.py  runtime.py  save_results.py
