[project]
name = "deep-learning"
version = "0.1.0"
description = "BiLSTM dự báo giá crypto (BTC/USDT) với pipeline 5 bước + CLI + notebook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
    "pandas-stubs~=2.3.3",
    "pyflakes>=3.4.0",
]

# Optional groups (không bắt buộc để chạy pipeline BiLSTM)
api = [
    "fastapi[standard]>=0.127.0",
    "uvicorn>=0.40.0",
]
llm = [
    "agno>=2.3.21",
    "openai>=2.14.0",
]
export = [
    "tf2onnx>=1.8.4",
]
